[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
itertools = "0.12.0"
